--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,4 +20,4 @@ jobs:
           passphrase: ${{ secrets.SSH_PASS }}
           script: |
             cd /opt/NyanBot/
-            git pull origin main
+#            git pull origin main
