--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,3 +20,5 @@ jobs:
           script: |
             cd /opt/NyanBot/
             git pull origin main
+            docker compose down
+            docker compose up --build
