--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,4 +21,4 @@ jobs:
             cd /opt/NyanBot/
             git pull origin main
             docker compose down
-            docker compose up --build
+            docker compose up --build -d
